# alphaengine

./: .gitignore  pyproject.toml  requirements.txt
.cursor/rules/: alphaengine.mdc  fastapi.mdc  python-general.mdc  testing.mdc  timezone.mdc
adapters/: __init__.py  interfaces.py  models.py
adapters/binance/: __init__.py  models.py  rate_limiter.py  rest_client.py  ws_client.py
adapters/db/: __init__.py  sqlite_adapter.py
adapters/mock/: __init__.py  exchange_client.py  notifier.py
adapters/slack/: __init__.py  notifier.py
adapters/upbit/: __init__.py  models.py  rest_client.py
bot/: __init__.py  __main__.py  bootstrap.py
bot/bnb_fee/: __init__.py  manager.py
bot/command/: __init__.py  claimer.py  processor.py
bot/executor/: __init__.py  executor.py
bot/market_data/: __init__.py  provider.py
bot/poller/: __init__.py  base.py  convert_poller.py  deposit_withdraw_poller.py  income_poller.py  price_cache_poller.py  reconciliation_poller.py  transfer_poller.py
bot/projector/: __init__.py  projector.py
bot/reconciler/: __init__.py  drift.py  reconciler.py
bot/recovery/: __init__.py  backfill.py  initial_capital.py  opening_reconciler.py
bot/risk/: __init__.py  (+3 more)
config/: secrets.yaml.example
core/: __init__.py  constants.py  logging.py  types.py
docs/: dev-phase-guide.md  web_service.md
scripts/: __init__.py  check_db.py  endurance_test.py  migrate_ledger.py  migrate_position_history.py  thin_slice.py  verify_assets.py
strategies/: __init__.py  base.py
tests/: conftest.py
web/: __init__.py  __main__.py  app.py  dependencies.py
(+212 files in other folders)
